JS-5: Add country of origin selection support

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -150,8 +150,15 @@ body {
     .ng2-auto-complete {
       width: 100%;
 
-      .auto-complete input {
-        padding: 10px 12px;
+      .auto-complete {
+        max-height: 150px;
+        input {
+          padding: 10px 12px;
+        }
+
+        ul {
+          max-height: 150px;
+        }
       }
     }
 
