JS-5: Remove errors on submit, disable submit button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -133,7 +133,7 @@ body {
       }
     }
 
-    &.disabled {
+    &.disabled, &[disabled] {
       &, &:hover {
         background-color: $color-blue-1;
         color: #eeeeee;
