JS-5: Improve form styling

--- a/app/views/user/user-register/user-register.component.html
+++ b/app/views/user/user-register/user-register.component.html
@@ -1,154 +1,156 @@
 <div class="user-register">
-  <div class="header form-group text-center">
+  <div class="header text-center">
     <div class="fs-l form-group">{{'user.create.title' | translate | uppercase}}</div>
     <div class="header-text">{{'user.create.description' | translate}}</div>
   </div>
 
-  <form #form="ngForm" (ngSubmit)="onSubmit()">
-    <div class="material-group">
-      <input type="text" id="ssn" [(ngModel)]="user.ssn" name="ssn" class="material-input" [ngClass]="{'not-empty': user.ssn, 'has-error': errors.ssn}" required pattern="^[\d\-]+$" minlength="10">
-      <label for="ssn" class="material-label">{{'user.form.ssn' | translate}}</label>
+  <div class="user-register-form">
+    <form #form="ngForm" (ngSubmit)="onSubmit()">
+      <div class="material-group">
+        <input type="text" id="ssn" [(ngModel)]="user.ssn" name="ssn" class="material-input" [ngClass]="{'not-empty': user.ssn, 'has-error': errors.ssn}" required pattern="^[\d\-]+$" minlength="10">
+        <label for="ssn" class="material-label">{{'user.form.ssn' | translate}}</label>
 
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.ssn && form.controls.ssn.invalid && form.controls.ssn.touched">
-        {{'user.form.ssn.validation' | translate}}
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.ssn && form.controls.ssn.invalid && form.controls.ssn.touched">
+          {{'user.form.ssn.validation' | translate}}
+        </div>
+        <div class="fs-m0 material-group-error" *ngIf="errors.ssn">
+          {{errors.ssn}}
+        </div>
       </div>
-      <div class="fs-m0 material-group-error" *ngIf="errors.ssn">
-        {{errors.ssn}}
+
+      <div class="material-group">
+        <input type="text" id="first-name" [(ngModel)]="user.firstName" name="firstName" class="material-input" [ngClass]="{'not-empty': user.firstName, 'has-error': errors.first_name}" required>
+        <label for="first-name" class="material-label">{{'user.form.first_name' | translate}}</label>
+
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.firstName && form.controls.firstName.invalid && form.controls.firstName.touched">
+          {{'user.form.first_name.validation' | translate}}
+        </div>
+        <div class="fs-m0 material-group-error" *ngIf="errors.first_name">
+          {{errors.first_name}}
+        </div>
       </div>
-    </div>
 
-    <div class="material-group">
-      <input type="text" id="first-name" [(ngModel)]="user.firstName" name="firstName" class="material-input" [ngClass]="{'not-empty': user.firstName, 'has-error': errors.first_name}" required>
-      <label for="first-name" class="material-label">{{'user.form.first_name' | translate}}</label>
+      <div class="material-group">
+        <input type="text" id="last-name" [(ngModel)]="user.lastName" name="lastName" class="material-input" [ngClass]="{'not-empty': user.lastName, 'has-error': errors.last_name}" required>
+        <label for="last-name" class="material-label">{{'user.form.last_name' | translate}}</label>
 
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.firstName && form.controls.firstName.invalid && form.controls.firstName.touched">
-        {{'user.form.first_name.validation' | translate}}
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.lastName && form.controls.lastName.invalid && form.controls.lastName.touched">
+          {{'user.form.last_name.validation' | translate}}
+        </div>
+        <div class="fs-m0 material-group-error" *ngIf="errors.last_name">
+          {{errors.last_name}}
+        </div>
       </div>
-      <div class="fs-m0 material-group-error" *ngIf="errors.first_name">
-        {{errors.first_name}}
+
+      <div class="material-group">
+        <input type="text" id="phone" [(ngModel)]="user.phone" name="phone" class="material-input" [ngClass]="{'not-empty': user.phone, 'has-error': errors.phone}" required minlength="9">
+        <label for="phone" class="material-label">{{'user.form.phone' | translate}}</label>
+
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.phone && form.controls.phone.invalid && form.controls.phone.touched">
+          {{'user.form.phone.validation' | translate}}
+        </div>
+        <div class="fs-m0 material-group-error" *ngIf="errors.phone">
+          {{errors.phone}}
+        </div>
       </div>
-    </div>
 
-    <div class="material-group">
-      <input type="text" id="last-name" [(ngModel)]="user.lastName" name="lastName" class="material-input" [ngClass]="{'not-empty': user.lastName, 'has-error': errors.last_name}" required>
-      <label for="last-name" class="material-label">{{'user.form.last_name' | translate}}</label>
+      <div class="material-group">
+        <input type="text" id="email" [(ngModel)]="user.email" name="email" class="material-input" [ngClass]="{'not-empty': user.email, 'has-error': errors.email}"
+               required pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$">
+        <label for="email" class="material-label">{{'user.form.email' | translate}}</label>
 
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.lastName && form.controls.lastName.invalid && form.controls.lastName.touched">
-        {{'user.form.last_name.validation' | translate}}
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.email && form.controls.email.invalid && form.controls.email.touched">
+          {{'user.form.email.validation' | translate}}
+        </div>
+        <div class="fs-m0 material-group-error" *ngIf="errors.email">
+          {{errors.email}}
+        </div>
       </div>
-      <div class="fs-m0 material-group-error" *ngIf="errors.last_name">
-        {{errors.last_name}}
+
+      <div class="material-group">
+        <input id="current-status" [(ngModel)]="user.currentStatus" name="currentStatus" class="material-input"
+               ng2-auto-complete [source]="statuses" value-property-name="''" display-property-name="name" required/>
+        <label for="current-status" class="label-up material-label">{{'user.form.current_status' | translate}}</label>
+
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.currentStatus && form.controls.currentStatus.invalid && form.controls.currentStatus.touched">
+          {{'user.form.current_status.validation' | translate}}
+        </div>
       </div>
-    </div>
 
-    <div class="material-group">
-      <input type="text" id="phone" [(ngModel)]="user.phone" name="phone" class="material-input" [ngClass]="{'not-empty': user.phone, 'has-error': errors.phone}" required minlength="9">
-      <label for="phone" class="material-label">{{'user.form.phone' | translate}}</label>
+      <div class="material-group">
+        <input id="at-und" [(ngModel)]="user.atUndStatus" name="atUndStatus" class="material-input"
+               ng2-auto-complete [source]="atUndStatuses" display-property-name="name" required/>
+        <label for="at-und" class="label-up material-label">{{'user.form.at_und' | translate}}</label>
 
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.phone && form.controls.phone.invalid && form.controls.phone.touched">
-        {{'user.form.phone.validation' | translate}}
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.atUndStatus && form.controls.atUndStatus.invalid && form.controls.atUndStatus.touched">
+          {{'user.form.at_und.validation' | translate}}
+        </div>
       </div>
-      <div class="fs-m0 material-group-error" *ngIf="errors.phone">
-        {{errors.phone}}
+
+      <div class="material-group">
+        <input type="date" id="arrived-at" [(ngModel)]="user.arrivedAt" name="arrivedAt" class="material-input" [ngClass]="{'not-empty': user.arrivedAt, 'has-error': errors.arrived_at}"
+               required pattern='^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$'>
+        <label for="arrived-at" class="label-up material-label">{{'user.form.arrived_at' | translate}}</label>
+
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.arrivedAt && form.controls.arrivedAt.invalid && form.controls.arrivedAt.touched">
+          {{'user.form.arrived_at.validation' | translate}}
+        </div>
+        <div class="fs-m0 material-group-error" *ngIf="errors.arrived_at">
+          {{errors.arrived_at}}
+        </div>
       </div>
-    </div>
 
-    <div class="material-group">
-      <input type="text" id="email" [(ngModel)]="user.email" name="email" class="material-input" [ngClass]="{'not-empty': user.email, 'has-error': errors.email}"
-             required pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$">
-      <label for="email" class="material-label">{{'user.form.email' | translate}}</label>
-
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.email && form.controls.email.invalid && form.controls.email.touched">
-        {{'user.form.email.validation' | translate}}
+      <div class="material-group">
+        <input id="country-of-origin" [(ngModel)]="user.countryOfOrigin" name="countryOfOrigin" class="material-input"
+               ng2-auto-complete [source]="countries" value-property-name="''" display-property-name="name" min-chars="2" required/>
+        <label for="country-of-origin" class="label-up material-label">{{'user.form.country_of_origin' | translate}}</label>
       </div>
-      <div class="fs-m0 material-group-error" *ngIf="errors.email">
-        {{errors.email}}
+
+      <div class="material-group">
+        <input type="password" id="password" [(ngModel)]="user.password" name="password" class="material-input" [ngClass]="{'not-empty': user.password, 'has-error': errors.password}" required>
+        <label for="password" class="material-label">{{'user.form.password' | translate}}</label>
+
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.password && form.controls.password.invalid && form.controls.password.touched">
+          {{'user.form.password.validation' | translate}}
+        </div>
+        <div class="fs-m0 material-group-error" *ngIf="errors.password">
+          {{errors.password}}
+        </div>
       </div>
-    </div>
 
-    <div class="material-group">
-      <input id="current-status" [(ngModel)]="user.currentStatus" name="currentStatus" class="material-input"
-             ng2-auto-complete [source]="statuses" value-property-name="''" display-property-name="name" required/>
-      <label for="current-status" class="label-up material-label">{{'user.form.current_status' | translate}}</label>
+      <div class="material-group">
+        <input type="password" id="repeat-password" [(ngModel)]="user.repeatPassword" name="repeatPassword" class="material-input" [ngClass]="{'not-empty': user.repeatPassword}" required>
+        <label for="repeat-password" class="material-label">{{'user.form.password' | translate}}</label>
 
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.currentStatus && form.controls.currentStatus.invalid && form.controls.currentStatus.touched">
-        {{'user.form.current_status.validation' | translate}}
+        <div class="fs-m0 material-group-error" *ngIf="form.controls.repeatPassword && form.controls.repeatPassword.touched && user.repeatPassword !== user.password">
+          {{'user.form.passwordCompare.validation' | translate}}
+        </div>
       </div>
-    </div>
 
-    <div class="material-group">
-      <input id="at-und" [(ngModel)]="user.atUndStatus" name="atUndStatus" class="material-input"
-             ng2-auto-complete [source]="atUndStatuses" display-property-name="name" required/>
-      <label for="at-und" class="label-up material-label">{{'user.form.at_und' | translate}}</label>
-
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.atUndStatus && form.controls.atUndStatus.invalid && form.controls.atUndStatus.touched">
-        {{'user.form.at_und.validation' | translate}}
+      <div class="material-group">
+        <input type="file" id="image-filename" name="imageFilename" class="material-input" (change)="onImageFilenameChange($event)" accept="image/*">
+        <label class="label-up material-label" for="image-filename">{{'user.form.picture' | translate}}</label>
       </div>
-    </div>
 
-    <div class="material-group">
-      <input type="date" id="arrived-at" [(ngModel)]="user.arrivedAt" name="arrivedAt" class="material-input" [ngClass]="{'not-empty': user.arrivedAt, 'has-error': errors.arrived_at}"
-             required pattern='^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$'>
-      <label for="arrived-at" class="label-up material-label">{{'user.form.arrived_at' | translate}}</label>
-
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.arrivedAt && form.controls.arrivedAt.invalid && form.controls.arrivedAt.touched">
-        {{'user.form.arrived_at.validation' | translate}}
+      <div class="form-group text-center">
+        <input type="checkbox" id="tac" name="tac" class="material-input" [(ngModel)]="user.acceptedTermsAndConditions" required>
+        <label for="tac">
+          {{'terms.accept' | translate}} {{'terms' | translate}}
+          <a href="app/assets/terms/160523_2051-2_Terms_and_Conditions_(en).pdf" target="_blank"> PDF EN</a>,
+          <a href="app/assets/terms/160520_2051-2_Anvandarvillkor_(sv).pdf" target="_blank"> PDF SV</a>
+        </label>
       </div>
-      <div class="fs-m0 material-group-error" *ngIf="errors.arrived_at">
-        {{errors.arrived_at}}
+
+      <div class="text-center">
+        <button type="submit" class="button primary form-group" [disabled]="form.invalid">{{'common.continue' | translate}}</button>
       </div>
-    </div>
-
-    <div class="material-group">
-      <input id="country-of-origin" [(ngModel)]="user.countryOfOrigin" name="countryOfOrigin" class="material-input"
-             ng2-auto-complete [source]="countries" value-property-name="''" display-property-name="name" min-chars="2" required/>
-      <label for="country-of-origin" class="label-up material-label">{{'user.form.country_of_origin' | translate}}</label>
-    </div>
-
-    <div class="material-group">
-      <input type="password" id="password" [(ngModel)]="user.password" name="password" class="material-input" [ngClass]="{'not-empty': user.password, 'has-error': errors.password}" required>
-      <label for="password" class="material-label">{{'user.form.password' | translate}}</label>
-
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.password && form.controls.password.invalid && form.controls.password.touched">
-        {{'user.form.password.validation' | translate}}
-      </div>
-      <div class="fs-m0 material-group-error" *ngIf="errors.password">
-        {{errors.password}}
-      </div>
-    </div>
-
-    <div class="material-group">
-      <input type="password" id="repeat-password" [(ngModel)]="user.repeatPassword" name="repeatPassword" class="material-input" [ngClass]="{'not-empty': user.repeatPassword}" required>
-      <label for="repeat-password" class="material-label">{{'user.form.password' | translate}}</label>
-
-      <div class="fs-m0 material-group-error" *ngIf="form.controls.repeatPassword && form.controls.repeatPassword.touched && user.repeatPassword !== user.password">
-        {{'user.form.passwordCompare.validation' | translate}}
-      </div>
-    </div>
-
-    <div class="material-group">
-      <input type="file" id="image-filename" name="imageFilename" class="material-input" (change)="onImageFilenameChange($event)" accept="image/*">
-      <label class="label-up material-label" for="image-filename">{{'user.form.picture' | translate}}</label>
-    </div>
-
-    <div class="form-group text-center">
-      <input type="checkbox" id="tac" name="tac" class="material-input" [(ngModel)]="user.acceptedTermsAndConditions" required>
-      <label for="tac">
-        {{'terms.accept' | translate}} {{'terms' | translate}}
-        <a href="app/assets/terms/160523_2051-2_Terms_and_Conditions_(en).pdf" target="_blank"> PDF EN</a>,
-        <a href="app/assets/terms/160520_2051-2_Anvandarvillkor_(sv).pdf" target="_blank"> PDF SV</a>
-      </label>
-    </div>
+    </form>
 
     <div class="text-center">
-      <button type="submit" class="button primary form-group" [disabled]="form.invalid">{{'common.continue' | translate}}</button>
-    </div>
-  </form>
-
-  <div class="text-center">
-    <div class="form-group">{{'common.have_account' | translate}}</div>
-    <div>
-      <a routerLink="/home" class="fs-m">{{'common.login' | translate}}</a>
+      <div class="form-group">{{'common.have_account' | translate}}</div>
+      <div>
+        <a routerLink="/home" class="fs-m">{{'common.login' | translate}}</a>
+      </div>
     </div>
   </div>
 </div>
