--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -132,28 +132,59 @@
     }
   }
 
-  .calendar {
-    position: relative;
-    width: 29px;
-    text-align: center;
-    font-weight: 700;
-    vertical-align: middle;
-    display: inline-block;
-    margin: auto 5px auto 20px;
-    font-size: 14px;
-    line-height: 1em;
+  .job-section {
+    .job-section-header {
+      display: flex;
+      padding: 20px;
+      font-size: 20px;
+
+      .calendar-container {
+        width: 50%;
+        text-align: left;
+
+        .calendar {
+          position: relative;
+          width: 29px;
+          text-align: center;
+          font-weight: 700;
+          vertical-align: middle;
+          display: inline-block;
+          margin: auto 5px auto 20px;
+          font-size: 14px;
+          line-height: 1em;
+        }
+        .calendar:before {
+          display: block;
+          content: '\e807';
+          position: absolute;
+          font-family: fontello;
+          font-size: 29px;
+          line-height: 1em;
+          left: 1px;
+          top: -12px;
+          font-weight: 300;
+        }
+      }
+
+      .all-jobs-button-container {
+        width: 50%;
+        text-align: right;
+
+        &:after {
+          font-family: fontello;
+          content: '\e80a';
+          vertical-align: middle;
+          margin-left: 6px;
+        }
+
+        a {
+          text-decoration: none;
+        }
+      }
+    }
   }
-  .calendar:before {
-    display: block;
-    content: '\e807';
-    position: absolute;
-    font-family: fontello;
-    font-size: 29px;
-    line-height: 1em;
-    left: 1px;
-    top: -12px;
-    font-weight: 300;
-  }
+
+
 
 
   .section-partners {
