JS-4: Add header and footer element

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,5 @@
+<header></header>
+
 <section class="app">
   <nav>
     <a routerLink="/home">Home</a>
@@ -7,3 +9,8 @@
   </nav>
   <router-outlet></router-outlet>
 </section>
+<footer>
+  <p>test1</p>
+  <p>test2</p>
+  <p>test3</p>
+</footer>
